--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
       Lol it won't work on your phone. Try viewing it on your laptop.
     </h1>
     <h1 class="header-web">Will you be my Valentine?</h1>
-    <a href="/yes-select.html"><button>Yes</button></a>
-    <button id="btn-no">No</button>
+    <div id="btns">
+      <a href="/yes-select.html"><button>Yes</button></a>
+      <button id="btn-no">No</button>
+    </div>
+    <div class="hearts">
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+      <div class="heart"></div>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
