--- a/yes-select.html
+++ b/yes-select.html
@@ -9,9 +9,11 @@
   <body>
     <h1>Yay! <3 Now time to put on your developer hat...</h1>
     <p>
-      Using the browser insepctor tool, change the background color of this
-      page.
+      Using the browser insepctor tool (ctrl + shift + c), change the
+      background-color of this page.
     </p>
+
     <h2 class="no-highlight">32.998415,-80.014906</h2>
   </body>
+  <script src="script2.js"></script>
 </html>
