--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="header-phone">
-      Lol it won't work on your phone. Try viewing it on your laptop.
+      Lol it won't work on your phone. Try viewing it on your laptop..
     </h1>
     <h1 class="header-web">Will you be my Valentine?</h1>
     <div id="btns">
