nav path update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </h1>
     <h1 class="header-web">Will you be my Valentine?</h1>
     <div id="btns">
-      <a href="/yes-select.html"><button>Yes</button></a>
+      <a href="/vday/yes-select.html"><button>Yes</button></a>
       <button id="btn-no">No</button>
     </div>
     <div class="hearts">
